--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,14 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.container{
+  display: flex;
+  justify-content: space-between;
+
+}
+
+h1{
+  font-size: 40px;
+}
+
